--- a/index.html
+++ b/index.html
@@ -8,9 +8,53 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Flower Shop</title>
 </head>
 <body>
-    
+      <header>
+        <div class="container">
+         <div class="header-title">
+       <h1 class="title-h1">
+        Let's make beautiful flowers a  part of your life.
+       </h1>
+        <p class="title-p">It is a long established fact that a reader will be distracted by the readable
+            content of a page when looking at its layout. The point of using Lorem Ipsum is
+            that it has a more-or-less normal distribution</p>
+        <button class="btn">Shop Now</button>
+         </div>
+          <div class="header-img">
+            <img src="Flower Asset/pngwing 10.png" alt="">
+          </div>
+        </div>
+      </header>
+
+      <main>
+    <section>
+        <div class="main-contant">
+         <h1 class="main-h1">Our Featured Flowers</h1>
+        <p  class="main-p">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.
+
+        </p>
+        </div>
+    </section>
+
+    <section>
+      <div class="banner">
+
+     <div  class="div1">
+        <img id ="a" src="Flower Asset/pngwing 6.png" alt="">
+     </div>
+     <div class="div2">
+        <img id="b" src="Flower Asset/pngwing 5.png" alt="">
+     </div>
+     <div class="div3">
+        <img id="c" src="Flower Asset/pngwing 7.png" alt="">
+     </div>
+      </div>
+    </section>
+      </main>
+      <footer>
+   
+      </footer>
 </body>
-</html>
+</html> 
