--- a/index.html
+++ b/index.html
@@ -43,15 +43,37 @@
 
      <div  class="div1">
         <img id ="a" src="Flower Asset/pngwing 6.png" alt="">
+        <h4 class="h4">Pink Flower Tree</h4>
      </div>
      <div class="div2">
-        <img id="b" src="Flower Asset/pngwing 5.png" alt="">
+        <img id="b" src="Flower Asset/pngwing 5.png" alt=""><br>
+        <br><br><br><br><br><br>
+        <h4 class="h4">pink Flower Tree</h4>
      </div>
      <div class="div3">
         <img id="c" src="Flower Asset/pngwing 7.png" alt="">
+        <h4 class="h4">Pink Flower Tree</h4>
      </div>
       </div>
     </section>
+
+    <section>
+      <div class="section2">
+         <div class="man">
+            <img src="Flower Asset/Group 57.png" alt="">
+            <h4 class="h3">Same Day Delivery. Click & Collect.</h4>
+         </div>
+         <div class="flower1">
+       <img src="Flower Asset/Group 58.png" alt="">
+       <h4 class="h3">Fresh Flowers. Local Growers.</h4>
+         </div>
+         <div class="support">
+            <img src="Flower Asset/Group 59.png" alt="">
+            <h4 class="h3">24/7 Free Support.</h4>
+         </div>
+      </div>
+    </section>
+
       </main>
       <footer>
    
