--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
       </div>
     </section>
 
+       <div class="section3">
+       <div class="section3-title">
+        <h1 class="section3-h1">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
+        <p class="section3-p">It is a long established fact that a reader will be distracted by the readable content <br>
+          of a page when looking at its layout.
+          
+        </p>
+        <button class="btn1">Sign Up</button>
+       </div>
+       <div class="section3-img">
+          <img src="Flower Asset/pngwing 8.png" alt="">
+       </div>
+       </div>
       </main>
       <footer>
    
