added modifay section3

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
          </div>
       </div>
     </section>
-
+       <section>
        <div class="section3">
        <div class="section3-title">
         <h1 class="section3-h1">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
@@ -87,6 +87,14 @@
           <img src="Flower Asset/pngwing 8.png" alt="">
        </div>
        </div>
+       </section>
+       
+          <div class="section4">
+            <h1>Instagram</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable <br>
+               content of a page when looking at its layout.
+            </p>
+          </div>
       </main>
       <footer>
    
