--- a/index.html
+++ b/index.html
@@ -88,13 +88,33 @@
        </div>
        </div>
        </section>
-       
+          <section>
           <div class="section4">
-            <h1>Instagram</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable <br>
+            <h1 class="section4-h1">Instagram</h1>
+            <p class="section4-p">It is a long established fact that a reader will be distracted by the readable <br>
                content of a page when looking at its layout.
             </p>
           </div>
+          </section>
+          <section>
+
+            <div class="section5">
+
+         <div id="section5-img1">
+            <img class="img5" src="Flower Asset/Flower 01.png" alt="">
+         </div>
+         <div class="section5-img1">
+            <img class="img5" src="Flower Asset/Rectangle 4.png" alt="">
+         </div>
+         <div class="section5-img1">
+            <img class="img5" src="Flower Asset/Rectangle 5.png" alt="">
+         </div>
+         <div class="section5-img1">
+            <img class="img5" src="Flower Asset/Rectangle 6.png" alt="">
+         </div>
+
+            </div>
+          </section>
       </main>
       <footer>
    
