--- a/index.html
+++ b/index.html
@@ -115,9 +115,29 @@
 
             </div>
           </section>
+             <section>
+               <div class="section6">
+
+                  <div class="section6-h1">Get The Latest Deals</div>
+                  <p class="section6-p">$30 coupon for first shopping</p>
+                  <form class="form">
+                     <input class="input" type="email" name="" id="" placeholder="your email:">
+                  </form>
+                  <div class="section6-btn">
+                  <button class="btn6">Subscribe</button>
+                  </div>
+               </div>
+             </section>
       </main>
       <footer>
-   
+         <div class="footer">
+        <h1 class="footer-h1"><span class="footer-f">Flower</span><span class="shop">Shop</span></h1>
+        <p class="footer-class">It is a long established fact that a reader will be distracted by the readable <br>
+         content of a page when looking at its layout.
+
+        </p>
+        <h4 class="footer-h4">@2020-2023 FlowerShop.com. All rights reserved. </h4>
+      </div>
       </footer>
 </body>
 </html> 
