--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
              </section>
       </main>
       <footer>
+         <section>
          <div class="footer">
         <h1 class="footer-h1"><span class="footer-f">Flower</span><span class="shop">Shop</span></h1>
         <p class="footer-class">It is a long established fact that a reader will be distracted by the readable <br>
@@ -138,6 +139,7 @@
         </p>
         <h4 class="footer-h4">@2020-2023 FlowerShop.com. All rights reserved. </h4>
       </div>
+         </section>
       </footer>
 </body>
 </html> 
